# star-trak

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: test.yml
orbit-predictor/: Cargo.toml
orbit-predictor/src/: main.rs  predictor.rs  satellite.rs
orbit-predictor/src/satellite/: transforms.rs
src/: engine.rs  lib.rs  main.rs  propagator.rs  satellite.rs  state.rs
src/engine/: state.rs  transforms.rs
src/propagator/: observer.rs  satellite.rs  state.rs  transforms.rs
src/satellite/: transforms.rs
