[package]
name = "orbit-predictor"
version = "0.1.0"
authors = ["Mohammed Nawabuddin <MNahad@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgp4 = "0.4.0"
ureq = { version = "1.5.1", features = ["json"] }
chrono = "0.4.0"
