[package]
name = "star_trak"
version = "0.4.0"
authors = ["Mohammed Nawabuddin <MNahad@users.noreply.github.com>"]
description = "WebAssembly-ready SGP4 realtime satellite tracker"
repository = ""
readme = "README.md"
license-file = "LICENSE"
edition = "2018"

[dependencies]
sgp4 = "0.5.0"
serde = "1.0.118"
serde_json = "1.0.61"
chrono = "0.4.19"
wasm-bindgen = { version = "0.2.70", optional = true }

[features]
js-api = ["chrono/wasmbind", "wasm-bindgen/serde-serialize"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
